# visca_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: camera_info.yaml  camera_info_low_res.yaml  config.yaml
include/visca_ros/: zoomcam.h
launch/: camera.launch  visca_camera.launch
msg/: CameraStatus.msg
scripts/: eeprom_config.py  install.sh  launcher.py  start.sh  uninstall.sh  visca.service
src/: zoomcam.cpp  zoomcam_node.cpp
srv/: ViscaService.srv
